bug: fixed text clipping issue with animation

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ header a:hover { color: #de993e !important; }
   font-size: 4vw;
   font-family: 'Roboto Mono', monospace;  
   top: 4.5vw;
-  padding: .5vh;
+  padding: .5vw;
 }
 
 #top_content p {
